fixed portfolio spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,8 @@ h3,
 	margin-right: 0;
 }
 /*main area*/
-#main-container {
-	padding-top: 130px;
+#main-container .container{
+	padding-top: 10px;
 }
 .main-section {
 	background: #fff;
@@ -51,8 +51,6 @@ h3,
 	margin: 10px;
 	float:left;
 }
-
-
 
 /*portfolio page*/
 .work {
